--- a/ITTasks/Views/User/CreateUser.cshtml
+++ b/ITTasks/Views/User/CreateUser.cshtml
@@ -5,27 +5,27 @@
 		<div class="mb-3 col-3">
 			<label asp-for="FullName" class="form-label">نام و نام خانوادگی </label>
 			<input asp-for="FullName" class="form-control">
-			<span asp-validation-for="FullName"></span>
+			<span class="text-danger" asp-validation-for="FullName"></span>
 		</div>
 		<div class="mb-3 col-3">
 			<label asp-for="UserName" class="form-label">نام کاربری </label>
 			<input asp-for="UserName" class="form-control">
-			<span asp-validation-for="UserName"></span>
+			<span class="text-danger" asp-validation-for="UserName"></span>
 		</div>
 		<div class="mb-3 col-3">
 			<label asp-for="Email" class="form-label">ایمیل </label>
 			<input asp-for="Email" class="form-control">
-			<span asp-validation-for="Email"></span>
+			<span class="text-danger" asp-validation-for="Email"></span>
 		</div>
 		<div class="mb-3 col-3">
 			<label asp-for="PhoneNumber" class="form-label">شماره تلفن همراه </label>
 			<input asp-for="PhoneNumber" class="form-control">
-			<span asp-validation-for="PhoneNumber"></span>
+			<span class="text-danger" asp-validation-for="PhoneNumber"></span>
 		</div>
 		<div class="mb-3 col-3">
 			<label asp-for="Password" class="form-label">رمز </label>
 			<input asp-for="Password" class="form-control">
-			<span asp-validation-for="Password"></span>
+			<span class="text-danger" asp-validation-for="Password"></span>
 		</div>
 		<input type="submit" class="btn btn-outline-success" value="ثبت" />
 		<br />
