--- a/ITTasks/Views/Tasks/UpdateTask.cshtml
+++ b/ITTasks/Views/Tasks/UpdateTask.cshtml
@@ -37,7 +37,7 @@
 			</div>
 			<div class="mb-3">
 				<label asp-for="Task.Duration" class="form-label">مقدار ساعت:</label>
-				<input asp-for="Task.Duration" type="number" step="0.25" min="0.25" class="form-control" />
+				<input asp-for="Task.Duration" type="number" step="5" min="5" step="5" class="form-control" />
 				<span asp-validation-for="Task.Duration" class="text-danger small"></span>
 			</div>
 			<div class="mb-3">
